# cub3D

./: .gitignore  CMakeLists.txt  Makefile  action.c  begin.c  check_texture.c  copy_map.c  create_screenshot.c  cub3D  cub3D.h  cub3d.h  donuts.xpm  draw.c  elexir.xpm  fl1.xpm  fl2.xpm  floor_ceiling_color.c  ft_copy_map.c  ft_error.c  ft_raycasting.c  green2.xpm  hooks.c  lego.xpm  libft.h  main.c  map.cub  paint_texture.c  plitka1.xpm  read_map.c  sprites.c  utility.c  valid_map.c
get_next_line/: get_next_line.h
libft/: Makefile  ft_atoi.c  ft_isspace.c  ft_strlen.c
txtrs/: blue.xpm  green1.xpm  pink.xpm  txtr6.xpm
